# anomaly-detection

./: CMakeLists.txt  LICENSE  README.md  checker.py  pdfSourceM.html
.github/workflows/: build-docs.yml
Writerside/: m.tree  redirection-rules.xml  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Kernel-Regression.md  build-kernel.md  estimate-gaussian.md  identify-outliers.md  k-secv.md  optimal-threshold.md  starter.md  stochastic-matrix.md  word-idx.md
anomaly_detection/: __equal.m  check_predictions.m  estimate_gaussian.m  gaussian_distribution.m  identify_outliers.m  metrics.m  multivariate_gaussian.m  optimal_threshold.m
checker/: config.json
checker/input/task1/: ref_1.mat  ref_2.mat  ref_3.mat  ref_4.mat  ref_5.mat  test_1.mat  test_2.mat  test_3.mat  test_4.mat  test_5.mat
checker/input/task2/: cholesky_like.mat  load1.mat  load2.mat  load3.mat  load4.mat  random_vectors.mat
checker/task-1/estimate_gaussian_1/: run_test.m  stdout
checker/task-1/estimate_gaussian_2/: run_test.m  stdout
checker/task-1/estimate_gaussian_3/: run_test.m  stdout
checker/task-1/estimate_gaussian_4/: run_test.m  stdout
checker/task-1/estimate_gaussian_5/: run_test.m  stdout
checker/task-1/identify_outliers_1/: run_test.m  stdout
checker/task-1/identify_outliers_2/: run_test.m  stdout
checker/task-1/identify_outliers_3/: run_test.m  stdout
checker/task-1/identify_outliers_4/: run_test.m  stdout
checker/task-1/identify_outliers_5/: run_test.m  stdout
checker/task-1/multivariate_gaussian_1/: run_test.m  stdout
checker/task-1/multivariate_gaussian_2/: run_test.m  stdout
checker/task-1/multivariate_gaussian_3/: run_test.m  stdout
checker/task-1/multivariate_gaussian_4/: run_test.m  stdout
checker/task-1/multivariate_gaussian_5/: run_test.m  stdout
checker/task-1/optimal_threshold_1/: run_test.m  stdout
checker/task-1/optimal_threshold_2/: run_test.m  stdout
checker/task-1/optimal_threshold_3/: run_test.m  stdout
checker/task-1/optimal_threshold_4/: run_test.m  stdout
checker/task-1/optimal_threshold_5/: run_test.m  stdout
checker/task-2/build-kernel1/: ref  run_test.m
checker/task-2/build-kernel2/: ref  run_test.m
checker/task-2/build-kernel3/: ref  run_test.m
checker/task-2/build-kernel4/: cholesky.m  get_prediction_params.m  out  ref  run_test.m  split_dataset.m  stderr
checker/task-2/test-cholesky-func/: ref  run_test.m
checker/task-2/test-dataset1/: ref  run_test.m  stdout
checker/task-2/test-dataset2/: ref  run_test.m
checker/task-2/test-dataset3/: ref  run_test.m  stdout
checker/task-2/test-dataset4/: run_test.m  stdout
checker/task-2/test-get-prediction-params/: ref  run_test.m
checker/task-2/test-get-prediction-params-iter/: run_test.m
checker/task-2/test-get-prediction-params-iter2/: ref  run_test.m
checker/task-2/test-get-prediction-params2/: run_test.m
checker/task-2/test-kernel-functions/: ref  run_test.m
checker/task-2/test-lower-inverse/: ref  run_test.m
checker/task-3/test-abc-distinct-k-secv/: ouput.mat  run_test.m
checker/task-3/test-abc-distinct-words/: output.mat  run_test.m
checker/task-3/test-abc-k-secv-2/: ouput.mat  run_test.m
docs/: HelpTOC.json  Map.jhm  build-kernel.html  cholesky.html  config.json  detectiaanomaliilor.html  distinct-k-secv.html  distinct-words.html  estimate-gaussian.html  get-lower-inverse.html  get-prediction-params-iter.html  get-predictions-params.html  identify-outliers.html  index.html  k-secv-idx.html  k-secv.html  kernel-functions.html  kernel-regression.html  markov-text-generation.html  multivariate-gaussian.html  optimal-threshold.html  split-dataset.html  starter.html  stochastic-matrix.html  word-idx.html
kernel_regression/: build_kernel.m  cholesky.m  conjugate_gradient.m  eval_value.m  gaussian_kernel.m  get_lower_inverse.m  get_prediction_params.m  get_prediction_params_iterative.m  linear_kernel.m  polynomial_kernel.m  split_dataset.m
stochastic_text_gen/: distinct_k_secv.m  distinct_words.m  k_secv.m  k_secv_idx.m  prob_choose.m  punctuation.m  sample_n_words.m  sample_next_word.m  split_input.m  stochastic_matrix.m  tema1_script.m  word_idx.m
stochastic_text_gen/test/: test.txt
utils/: checker_README.md
(+52 files in other folders)
