cmake_minimum_required(VERSION 3.27)
project(Tema1MN C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(Tema1MN
        anomaly_detection/__equal.m
        anomaly_detection/check_predictions.m
        anomaly_detection/estimate_gaussian.m
        anomaly_detection/gaussian_distribution.m
        anomaly_detection/identify_outliers.m
        anomaly_detection/metrics.m
        anomaly_detection/multivariate_gaussian.m
        anomaly_detection/optimal_threshold.m
        checker/task-1/estimate_gaussian_1/run_test.m
        checker/task-1/estimate_gaussian_2/run_test.m
        checker/task-1/estimate_gaussian_3/run_test.m
        checker/task-1/estimate_gaussian_4/run_test.m
        checker/task-1/estimate_gaussian_5/run_test.m
        checker/task-1/identify_outliers_1/run_test.m
        checker/task-1/identify_outliers_2/run_test.m
        checker/task-1/identify_outliers_3/run_test.m
        checker/task-1/identify_outliers_4/run_test.m
        checker/task-1/identify_outliers_5/run_test.m
        checker/task-1/multivariate_gaussian_1/run_test.m
        checker/task-1/multivariate_gaussian_2/run_test.m
        checker/task-1/multivariate_gaussian_3/run_test.m
        checker/task-1/multivariate_gaussian_4/run_test.m
        checker/task-1/multivariate_gaussian_5/run_test.m
        checker/task-1/optimal_threshold_1/run_test.m
        checker/task-1/optimal_threshold_2/run_test.m
        checker/task-1/optimal_threshold_3/run_test.m
        checker/task-1/optimal_threshold_4/run_test.m
        checker/task-1/optimal_threshold_5/run_test.m
        checker/task-2/build-kernel1/run_test.m
        checker/task-2/build-kernel2/run_test.m
        checker/task-2/build-kernel3/run_test.m
        checker/task-2/build-kernel4/run_test.m
        checker/task-2/test-cholesky-func/run_test.m
        checker/task-2/test-dataset1/run_test.m
        checker/task-2/test-dataset2/run_test.m
        checker/task-2/test-dataset3/run_test.m
        checker/task-2/test-dataset4/run_test.m
        checker/task-2/test-get-prediction-params/run_test.m
        checker/task-2/test-get-prediction-params-iter/run_test.m
        checker/task-2/test-get-prediction-params-iter2/run_test.m
        checker/task-2/test-get-prediction-params2/run_test.m
        checker/task-2/test-kernel-functions/run_test.m
        checker/task-2/test-lower-inverse/run_test.m
        checker/task-3/test-abc-distinct-k-secv/run_test.m
        checker/task-3/test-abc-distinct-words/run_test.m
        checker/task-3/test-abc-k-secv-2/run_test.m
        checker/task-3/test-abc-k-secv-3/run_test.m
        checker/task-3/test-abc-stochastic-matrix/run_test.m
        checker/task-3/test-jekyllandhyde-stochastic-matrix/run_test.m
        checker/task-3/test-piatza-distinct-words/run_test.m
        checker/task-3/test-poe-distinct-k-secv-and-distinct-words/run_test.m
        checker/task-3/test-poe-stochastic-matrix/run_test.m
        checker/task-3/test-poe-word-idx/run_test.m
        checker/task-3/test-poe-word-idx-and-k-secv-idx/run_test.m
        checker/task-3/test-split-input/run_test.m
        kernel_regression/build_kernel.m
        kernel_regression/cholesky.m
        kernel_regression/conjugate_gradient.m
        kernel_regression/eval_value.m
        kernel_regression/gaussian_kernel.m
        kernel_regression/get_lower_inverse.m
        kernel_regression/get_prediction_params.m
        kernel_regression/get_prediction_params_iterative.m
        kernel_regression/linear_kernel.m
        kernel_regression/polynomial_kernel.m
        kernel_regression/split_dataset.m
        stochastic_text_gen/distinct_k_secv.m
        stochastic_text_gen/distinct_words.m
        stochastic_text_gen/k_secv.m
        stochastic_text_gen/k_secv_idx.m
        stochastic_text_gen/prob_choose.m
        stochastic_text_gen/punctuation.m
        stochastic_text_gen/sample_n_words.m
        stochastic_text_gen/sample_next_word.m
        stochastic_text_gen/split_input.m
        stochastic_text_gen/stochastic_matrix.m
        stochastic_text_gen/tema1_script.m
        stochastic_text_gen/word_idx.m)
